src/objects/Deal_Item__c.object
<CustomObject>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Item</relationshipLabel>
        <relationshipName>Deal_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <formula>(( Sales_Price__c - Transfer_Price__c ) /  Sales_Price__c )</formula>
        <label>Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Sales_Price__c  -  Transfer_Price__c</formula>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Edition__c</fullName>
        <label>Product/Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_ManagerEmail__c</fullName>
        <label>Relationship Manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manger_Email__c</fullName>
        <label>Sales Manger Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Price_Licenses__c</fullName>
        <formula>Quantity__c  *  Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price(Licenses)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Services__c</fullName>
        <formula>Quantity__c  *  Unit_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price(Services)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Price__c</fullName>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <label>Unit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deal Item</label>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>Deal Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Items</pluralLabel>
    <recordTypes>
        <fullName>Licenses</fullName>
        <active>true</active>
        <label>Licenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <label>Services</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_shouldnot_be_null</fullName>
        <active>false</active>
        <errorConditionFormula>(ISBLANK(Quantity__c)) ||  (Quantity__c  = 0)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Quantity should not be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Price_Should_not_be_null</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Sales_Price__c ) ||  (Sales_Price__c  = 0)</errorConditionFormula>
        <errorMessage>Sales price shouldnot be blank or Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Startdate_should_be_greater_than_Enddate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date: Start Date should not be lessthan End Date</errorMessage>
    </validationRules>
</CustomObject>